# bevy_command_non_send

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
bevy_command_non_send/: all.html  fn.init_non_send_resource.html  fn.insert_non_send_resource.html  fn.remove_non_send_resource.html  index.html  sidebar-items.js  trait.CommandsExt.html
src/: lib.rs
src/bevy_command_non_send/: lib.rs.html
trait.impl/bevy_command_non_send/: trait.CommandsExt.js
